# energemin

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
src/: __init__.py  app.py  gemini_llm.py  location.py  machine_stats.py  main.py
src/prompts/: prompt.yaml
tests/: test_gemini_llm.py  test_location.py  test_machine_stats.py
